# FastApiAuth

./: LICENSE  alembic.ini  pyproject.toml
src/api/routers/: router.py
src/db/: database.py
